--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -7,13 +7,14 @@
 
 <p>
   <strong>Typ:</strong>
-  <%= @game.typ %>
+  <%= @game.type %>
 </p>
 
 <p>
   <strong>Time:</strong>
   <%= @game.time %>
 </p>
+
 
 <%= link_to 'Edit', edit_game_path(@game) %> |
 <%= link_to 'Back', games_path %>
